vanilla_path_router/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO

          route_config:

            virtual_hosts:
            - name: backends
              domains: ["*"]
              routes:
              - match: {
                  prefix: "/bacon"
                }
                route: {
                  host_rewrite: ˜baconipsum.com˜,
                  prefix_rewrite: "/api/?type=meat-and-filler",
                  cluster: service_bacon
                }

          http_filters:
          - name: envoy.router

  clusters:
  - name: service_bacon
    connect_timeout: 15.0s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_bacon
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: baconipsum.com
                port_value: 443
    tls_context:
      sni: baconipsum.com
